<resources>
    <string name="app_name">thunderscope-frontend</string>
    <string name="activity_login_title">Login To Account</string>
    <string name="activity_login_email_label">Email</string>
    <string name="activity_login_email_hint">Email</string>
    <string name="activity_login_password_label">Password</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_button_label">Login to account</string>
    <string name="activity_login_dont_have_an_account_label">Don\'t have an account?</string>
    <string name="activity_login_sign_up_label">Sign Up</string>
    <string name="activity_sign_up_title">Sign Up</string>
    <string name="activity_sign_up_email_label">Email</string>
    <string name="activity_sign_up_email_hint">Email</string>
    <string name="activity_sign_up_password_label">Password</string>
    <string name="activity_sign_up_password_hint">Enter password</string>
    <string name="activity_sign_up_name_label">Name</string>
    <string name="activity_sign_up_name_hint">Enter name</string>
    <string name="activity_sign_up_phone_number_label">Phone Number</string>
    <string name="activity_sign_up_phone_number_hint">Enter phone number</string>
    <string name="activity_sign_up_specialist_label">Specialist</string>
    <string name="activity_sign_up_birthdate_label">Birthdate</string>
    <string name="activity_sign_up_birthdate_hint">YYYY-DD-MM</string>
    <string name="activity_sign_up_button_create_account">Create Account</string>
    <string name="activity_sign_up_have_account_label">Have Account?</string>
    <string name="activity_sign_up_login_now_label">Login Now</string>
    <string name="activity_case_dashboard_header_cases_title">Cases</string>
    <string name="activity_case_dashboard_header_device_status">Device Connected</string>
    <string name="activity_case_dashboard_section_all_cases_label">All Cases</string>
    <string name="activity_case_dashboard_section_all_cases_count">(27)</string>
    <string name="activity_case_dashboard_section_button_start_new_test">Start New Test</string>
    <string name="activity_case_dashboard_sidebar_menu_all_cases_label">All Cases</string>
    <string name="activity_case_dashboard_sidebar_menu_all_cases_count">27</string>
    <string name="activity_case_dashboard_sidebar_menu_for_review_label">For Review</string>
    <string name="activity_case_dashboard_sidebar_menu_for_review_count">1</string>
    <string name="activity_case_dashboard_sidebar_menu_in_progress">In Progress</string>
    <string name="activity_case_dashboard_sidebar_menu_in_progress_count">1</string>
    <string name="activity_case_dashboard_sidebar_menu_completed">Completed</string>
    <string name="activity_case_dashboard_sidebar_menu_completed_count">0</string>
    <string name="activity_case_dashboard_sidebar_menu_todo_list">To Do List</string>
    <string name="activity_case_dashboard_sidebar_menu_crm">Crm</string>
    <string name="activity_case_dashboard_sidebar_menu_crm_submenu_patients">Patients</string>
    <string name="activity_case_dashboard_sidebar_menu_crm_submenu_reports">Reports</string>
    <string name="activity_case_dashboard_sidebar_menu_crm_submenu_archive">Archive</string>
    <string name="activity_case_dashboard_filter_section_time_period_label">Time Period</string>
    <string name="activity_case_dashboard_filter_section_status_label">Status</string>
    <string name="activity_case_dashboard_filter_section_type_label">Type</string>
    <string name="activity_case_dashboard_filter_section_gender_label">Gender</string>
    <string name="activity_case_dashboard_filter_section_age_label">Age</string>
    <string name="activity_case_dashboard_sp_section_search_by_label">Search by: </string>
    <string name="activity_case_dashboard_sp_section_search_patient_id_hint">Search Patient ID</string>
    <string name="activity_case_dashboard_sp_section_search_doctor_id_hint">Search Doctor ID</string>
    <string name="activity_case_dashboard_sp_section_pagination">1-10 of 20</string>
    <string name="activity_case_dashboard_th_section_case_label">Case</string>
    <string name="activity_case_dashboard_th_section_physician_label">Physician</string>
    <string name="activity_case_dashboard_th_section_patient_label">Patient</string>
    <string name="activity_case_dashboard_th_section_birthdate_and_gender_label">Birthdate &amp; Gender</string>
    <string name="activity_case_dashboard_th_section_last_update_label">Last Update</string>
    <string name="activity_case_dashboard_th_section_status_label">Status</string>
    <string name="activity_case_dashboard_th_section_type_label">Type</string>
    <string name="activity_case_dashboard_th_section_assessment_label">Assessments</string>
    <string name="activity_create_new_test_header_title">Create New Test</string>
    <string name="activity_create_new_test_header_device_status">Device Connected</string>
    <string name="activity_create_new_test_sidebar_menu_setup_device">Setup Device </string>
    <string name="activity_create_new_test_sidebar_menu_patient_info">Patient Info</string>
    <string name="activity_create_new_test_fragment_setup_device_label">Setup Device</string>
    <string name="activity_create_new_test_fragment_steps_to_set_up_label">Steps to set up</string>
    <string name="activity_create_new_test_fragment_step1_label">1. Connect the microscope</string>
    <string name="activity_create_new_test_fragment_step2_label">2. Press the start button on the device</string>
    <string name="activity_create_new_test_fragment_button_connect">Connect</string>
    <string name="activity_create_patient_info_fragment_label">Create Patient Info</string>
    <string name="activity_create_patient_info_fragment_select_option_label">Select Option:</string>
    <string name="activity_create_patient_info_fragment_sp_create_new_patient_label">Create New Patient</string>
    <string name="activity_create_patient_info_fragment_sp_select_existing_patient_label">Select Existing Patient</string>
    <string name="activity_create_patient_info_fragment_sp_search_patient_id_hint">Search Patient ID</string>
    <string name="activity_create_patient_info_fragment_name_label">Patient Name</string>
    <string name="activity_create_patient_info_fragment_name_hint">Enter Name</string>
    <string name="activity_create_patient_info_fragment_gender_label">Gender</string>
    <string name="activity_create_patient_info_fragment_email_label">Email</string>
    <string name="activity_create_patient_info_fragment_email_hint">Email</string>
    <string name="activity_create_patient_info_fragment_phone_number_label">Phone Number</string>
    <string name="activity_create_patient_info_fragment_phone_number_hint">Phone Number</string>
    <string name="activity_create_patient_info_fragment_birth_date_label">Birth Date</string>
    <string name="activity_create_patient_info_fragment_birth_date_hint">YYYY-DD-MM</string>
    <string name="activity_create_patient_info_fragment_age_label">Age</string>
    <string name="activity_create_patient_info_fragment_age_hint">Age</string>
    <string name="activity_create_patient_info_fragment_state_label">State</string>
    <string name="activity_create_patient_info_fragment_address_label">Address</string>
    <string name="activity_create_patient_info_fragment_address_hint">Enter address</string>
    <string name="activity_create_patient_info_fragment_button_submit">Submit</string>
    <string name="activity_todo_list_dashboard_header_cases_title">Cases</string>
    <string name="activity_todo_list_dashboard_header_device_status">Device Connected</string>
    <string name="activity_todo_list_dashboard_section_todo_list_label">To Do List</string>
    <string name="activity_todo_list_dashboard_section_todo_list_count">(26)</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_all_cases_label">All Cases</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_all_cases_count">27</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_for_review_label">For Review</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_for_review_count">1</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_in_progress_label">In Progress</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_in_progress_count">1</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_completed_label">Completed</string>
    <string name="activity_todo_list_dashboard_sidebar_menu_completed_count">0</string>
    <string name="activity_todo_list_dashboard_filter_section_time_period_label">Time Period</string>
    <string name="activity_todo_list_dashboard_filter_section_status_label">Status</string>
    <string name="activity_todo_list_dashboard_filter_section_type_label">Type</string>
    <string name="activity_todo_list_dashboard_filter_section_gender_label">Gender</string>
    <string name="activity_todo_list_dashboard_filter_section_age_label">Age</string>
    <string name="activity_todo_list_dashboard_sp_section_search_by_label">Search by: </string>
    <string name="activity_todo_list_dashboard_sp_section_search_patient_id_hint">Search Patient ID</string>
    <string name="activity_todo_list_dashboard_sp_section_pagination">1-10 of 20</string>
    <string name="activity_todo_list_dashboard_th_section_case_label">Case</string>
    <string name="activity_todo_list_dashboard_th_section_todo_label">To Do</string>
    <string name="activity_todo_list_dashboard_th_section_patient_label">Patient</string>
    <string name="activity_todo_list_dashboard_th_section_birthdate_and_gender_label">Birthdate &amp; Gender</string>
    <string name="activity_todo_list_dashboard_th_section_last_update_label">Last Update</string>
    <string name="activity_todo_list_dashboard_th_section_status_label">Status</string>
    <string name="activity_todo_list_dashboard_th_section_assessments_label">Assessments</string>
    <string name="activity_patient_dashboard_header_patients_title">Patients</string>
    <string name="activity_patient_dashboard_header_device_status">Device Connected</string>
    <string name="activity_patient_dashboard_section_patients_label">Patients</string>
    <string name="activity_patient_dashboard_section_patients_count">(26)</string>
    <string name="activity_patient_dashboard_section_button_add_new_patient">Add New Patient</string>
    <string name="activity_patient_dashboard_sidebar_menu_all_list_label">All List</string>
    <string name="activity_patient_dashboard_sidebar_menu_all_list_count">26</string>
    <string name="activity_patient_dashboard_sidebar_menu_not_started_label">Not Started</string>
    <string name="activity_patient_dashboard_sidebar_menu_not_started_count">25</string>
    <string name="dialog_archive_confirm_message">Are you sure you want to unarchive this record?</string>
    <string name="dialog_archive_confirm_button_yes">Yes</string>
    <string name="dialog_archive_confirm_button_no">No</string>
    <string name="activity_slides_header_device_status">Device Connected</string>
    <string name="dialog_create_annotation_set_annotation_label">Set Annotation</string>
    <string name="dialog_create_annotation_label_label">Label</string>
    <string name="dialog_create_annotation_label_hint">Need Review</string>
    <string name="dialog_create_annotation_button_save">Save</string>
    <string name="dialog_create_annotation_button_cancel">Cancel</string>
    <string name="activity_settings_settings">Settings</string>
    <string name="activity_settings_language_options">Language Options</string>
    <string name="activity_settings_english">English</string>
    <string name="activity_settings_bahasa_indonesia">Bahasa Indonesia</string>
    <string name="activity_settings_account_options">Account Options</string>
    <string name="activity_settings_log_out">Log Out</string>
</resources>