<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.6"
        android:text="@string/dialog_archive_confirm_message" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="end">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_archive_confirm_button_yes"
            android:textAllCaps="true"
            android:backgroundTint="@color/blue_dark" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_archive_confirm_button_no"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/blue_dark" />
    </LinearLayout>
</LinearLayout>
