<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:id="@+id/annotationContainer"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/annotationForm"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialog_create_annotation_set_annotation_label"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/white"
                android:src="@drawable/ic_close"
                android:layout_marginStart="32dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/dialog_create_annotation_label_label" />

        <EditText
            android:id="@+id/ed_annotation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_rounded_dialog_form"
            android:hint="@string/dialog_create_annotation_label_hint"
            android:paddingVertical="8dp"
            android:textColor="@color/white"
            android:paddingHorizontal="6dp"
            android:textColorHint="@color/gray_opacity_80"
            android:inputType="text"
            android:transitionName="email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/dialog_create_annotation_button_save"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/dialog_create_annotation_button_cancel"
                app:cornerRadius="6dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>